packages/fuels-macros/tests/ui/setup_contract_test_macro/duplicate_wallet_names.rs
use fuels_macros::setup_contract_test;

setup_contract_test!(
    Wallets("wallet1", "wallet1"),
    Abigen(name = "MyContract", abi = "some_file.json")
);

fn main() {}
